Use plural routes.
